--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "email": "alex@alexslaughter.com"
     }],
     "require": {
-        "intercom/intercom-php": "^3.1.8",
+        "intercom/intercom-php": "3.2.0",
         "laravel/framework": ">=5.0"
     },
     "autoload": {
