--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
         "email": "alex@alexslaughter.com"
     }],
     "require": {
-        "php": "^7.0",
-        "intercom/intercom-php": "4.0.2",
+        "php": "^7.1",
+        "intercom/intercom-php": "^4.0",
         "laravel/framework": ">=5.1"
     },
     "autoload": {
